Ajuste config para encoding UTF-8.

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,12 @@ test {
     systemProperties System.getProperties()
 }
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 gradle.startParameter.continueOnFailure = true
 
 test.finalizedBy(aggregate)
